Time-series bucket catalog should reject inserts with missing/invalid time field

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2021-02-08, Execution Team 2021-02-22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In BucketCatalog::insert, currently we look up the time field without first checking whether it exists or is even of the correct type. We should return an error in this case.

            Assignee:
            Dan Larkin-York
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: