SERVER-54269 Time-series bucket catalog should reject inserts with missing/invalid time field